--- a/views/layout.erb
+++ b/views/layout.erb
@@ -29,15 +29,17 @@
 			  </div>
 			  <div class="navbar-collapse collapse">
 			    <ul class="nav navbar-nav">
+						<li><a href="/visit">Appointment</a></li>
 						<li><a href="/new">New</a></li>
+						<li><a href="/contacts">Contact Us</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
 			        <li class="dropdown">
 			          <a href="#" class="dropdown-toggle" data-toggle="dropdown"><b class="caret"></b></a>
 			        <ul class="dropdown-menu">
-			            <li><a href="/login/form">Login</a></li>
-			            <li class="divider"></li>
-			            <li><a href="/logout">Logout</a></li>
+			            <!--<li><a href="/visit">Appointment</a></li>-->
+			            <!--<li class="divider"></li>-->
+			           <!---->
 			        </ul>
 			      </li>
 
