--- a/views/visit.erb
+++ b/views/visit.erb
@@ -14,23 +14,23 @@
 
   <div class="form-group">
     <label>Your Name</label>
-    <input name="username" type="text" class="form-control" placeholder="Enter your name" value="<%= @username %>">
+    <input name="client[name]" type="text" class="form-control" placeholder="Enter your name">
   </div>
 
   <div class="form-group">
     <label>Your Phone</label>
-    <input id="aaa" name="phone" type="text" class="form-control" placeholder="Enter your
-    phone" value="<%= @phone %>">
+    <input name="client[phone]" type="text" class="form-control" placeholder="Enter your
+    phone">
   </div>
 
   <div class="form-group">
     <label>Date and Time</label>
-    <input id="datetimepicker" name="date_time" type="text" class="form-control" placeholder="Enter Date and Time" value="<%= @datetime %>">
+    <input name="client[datestamp]" id="datetimepicker" type="text" class="form-control" placeholder="Enter Date and Time">
   </div>
 
   <div class="form-group">
     <label>Chose your Barber!!!</label>
-    <select name="barber" class="form-control">
+    <select name="client[barber]" class="form-control">
 
       <% @barbers.each do |item| %>
 
@@ -43,7 +43,7 @@
 
   <div class="form-group">
     <label>Choose your color</label>
-    <select name="color" class="form-control">
+    <select name="client[color]" class="form-control">
       <option>Red</option>
       <option>Green</option>
       <option>Blue</option>
