--- a/views/visit.erb
+++ b/views/visit.erb
@@ -14,18 +14,18 @@
 
   <div class="form-group">
     <label>Your Name</label>
-    <input name="client[name]" type="text" class="form-control" placeholder="Enter your name">
+    <input name="client[name]" type="text" class="form-control" placeholder="Enter your name" value="<%= @c.name %>">
   </div>
 
   <div class="form-group">
     <label>Your Phone</label>
     <input name="client[phone]" type="text" class="form-control" placeholder="Enter your
-    phone">
+    phone" value="<%= @c.phone %>">
   </div>
 
   <div class="form-group">
     <label>Date and Time</label>
-    <input name="client[datestamp]" id="datetimepicker" type="text" class="form-control" placeholder="Enter Date and Time">
+    <input name="client[datestamp]" id="datetimepicker" type="text" class="form-control" placeholder="Enter Date and Time" value="<%= @c.datestamp %>">
   </div>
 
   <div class="form-group">
