--- a/views/layout.erb
+++ b/views/layout.erb
@@ -31,6 +31,7 @@
 			    <ul class="nav navbar-nav">
 						<li><a href="/visit">Appointment</a></li>
 						<li><a href="/new">New</a></li>
+						<li><a href="/booking">Bookings</a></li>
 						<li><a href="/contacts">Contact Us</a></li>
 			    </ul>
 			    <ul class="nav navbar-nav navbar-right">
